--- a/bootStrap.html
+++ b/bootStrap.html
@@ -199,7 +199,8 @@
             <div id="mapWrapper" class="col vh-100 collapse show" aria-expanded="true"
                 style="margin-top:65px; z-order:0">
                 <div id="mapid" style="height:850px;">
-                </div> <!-- map id -->
+                </div> 
+                <!-- map id -->
             </div>
             <!-- map wrapper -->
             <!-- store the graph -->>
