--- a/dashboard.html
+++ b/dashboard.html
@@ -46,7 +46,7 @@
     <script src="./assets/js/init-alpine.js"></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.9.3/Chart.min.css" />
     <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.9.3/Chart.min.js" defer></script>
-    <script src="./assets/js/charts-pie.js" defer></script>    
+       
   </head>
 
   <body>
@@ -329,14 +329,10 @@
                 </h4>
                 <canvas id="bars"></canvas>
                 <div class="flex justify-center mt-4 space-x-3 text-sm text-gray-600 dark:text-gray-400">
-                  <!-- Chart legend -->
-                  <div class="flex items-center">
-                    <span class="inline-block w-3 h-3 mr-1 bg-teal-500 rounded-full"></span>
-                    <span>Shoes</span>
-                  </div>
+                  <!-- Chart legend -->                  
                   <div class="flex items-center">
                     <span class="inline-block w-3 h-3 mr-1 bg-purple-600 rounded-full"></span>
-                    <span>Bags</span>
+                    <span>Asset conditions</span>
                   </div>
                 </div>
               </div>
@@ -370,7 +366,8 @@
     // only load the layer when the cesium basemap has been created
     document.addEventListener('DOMContentLoaded', async function () {
       await loadVectorLayer();
-      await loadBarChart();    
+      await loadBarChart();  
+      await loadPieChart();
 
     }, 
     false);
