Created help.html and added ref to the help menu in html so when the user clicks on the menu they will be guide to the user guide page.

--- a/bootStrap.html
+++ b/bootStrap.html
@@ -165,9 +165,9 @@
                             <span class="d-none d-lg-inline-flex">Help Menu</span>
                         </a>
                         <div class="dropdown-menu dropdown-menu-end bg-light border-0 rounded-0 rounded-bottom m-0">
-                            <a href="#" class="dropdown-item">
-                                <h6 class="fw-normal mb-0">Help 1</h6>
-                                <small>Data Collection</small>
+                            <a href="help.html" class="dropdown-item">
+                                <h6 class="fw-normal mb-0">Help</h6>
+                                <small>User Guide</small>
                             </a>
                             <hr class="dropdown-divider">
                             <a href="dashboard.html" class="dropdown-item">
