--- a/help.html
+++ b/help.html
@@ -20,7 +20,7 @@
       height: 30px;
       text-align: center;
       border-radius: 50%;
-      background-color: #4CAF50;
+      background-color: blue;
       color: white;
       font-size: 20px;
       line-height: 30px;
@@ -36,7 +36,8 @@
       margin-top: 20px;
       border: 1px solid #ccc;
       box-shadow: 1px 1px 3px #ccc;
-    }
+      
+    }    
   </style>
 </head>
 
@@ -68,10 +69,12 @@
     <div>
       <div class="step-number">3</div>
       To create your own asset point, explore the map and click on the location you want. A pop-up form will appear
-      for you to fill in. Please note that both<b> Asset Name</b> and <b>Installation Date</b>  are compulsory fields. If you leave
-      them blank, a reminder message will pop up. Simply close them and refill the form.
-      <img src="img/popup1.png" alt="Screenshot of popup" class="screenshot">
-      <img src="img/popup2.png" alt="Screenshot of popup" class="screenshot">
+      for you to fill in. 
+      <img src="img/assetform.PNG" alt="Screenshot of popup" class="screenshot">
+      Please note that both<b> Asset Name</b> and <b>Installation Date</b>  are compulsory fields. If you leave
+      them blank, a reminder message will pop up. Simply click on OK to close them and refill the form.
+      <img src="img/popup1.PNG" alt="Screenshot of popup" class="screenshot">
+      <img src="img/popup2.PNG" alt="Screenshot of popup" class="screenshot">
 
       <br><b>Important: The name you choose for your asset must be unique. If the name has already been taken, a
         reminder will pop up, and you'll need to choose a different name and refill the form.</b>
@@ -95,14 +98,10 @@
     </div>
     <div>
       <div class="step-number">6</div>
-      If you want to explore more about the asset information, click on the <b>Dashboard (Assets Visulisation)</b> menu in the Help Menu list and you'll be directed to the dashboard page.
+      If you want to explore more about the asset information, click on the <b>Dashboard (Assets Visulisation)</b> menu in the Help Menu list and you'll be directed to the dashboard page, where you can explore asset information in a 3D map via clicking on the bar graph.
       <img src="img/dashboard_menu.png" alt="Screenshot of popup" class="screenshot"> 
-    </div>
-    
-  </ol>
-
-
-  
+    </div>       
+  </ol>  
   </div>
 </body>
 
